2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for new performance counters.

	* lib/include/svp/perf.h: New counters for TT and FT occupancy.
	* lib/src/perf.h: Name the new counters. Also support computer
	columns.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `spr'.

	* tools/lib/slc/lower/seq.py (TFun_2_CFun): Fix support for thread
	function pointer declarations.

2010-07-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance support for `_mutable' global thread parameters.

	* tools/lib/slc/lower/seq.py (TFun_2_CFun.visit_funparm): Do not
	declare `_mutable' parameters with the `register' qualifier, since
	they should have an address.

2010-07-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `spr'.

	A large inefficiency would cause exponential space complexity
	during transformation in the depth of C scope nesting. This would
	cause exceedingly large compilation times and/or stack blowouts
	for large programs.

	* tools/lib/slc/visitors.py (ScopedVisitor): Remember the current
	stack of C scopes.

	* tools/lib/slc/lower/split.py (SplitCreates.visit_lowcreate):
	Also memoize the stack of current scopes, so that they are not
	duplicated when duplicating the `Create' objects.

2010-07-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow `return' to terminate the current thread.

	* tools/lib/t-sppalpha/slimpl.m4,
	* tools/lib/t-spr/slimpl.m4,
	* tools/lib/t-utc0/slimpl.m4 (sl_def, sl_enddef): Alias `return'
	to `sl_end_thread'. (Syntax sugar)

2010-07-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow the `utc0' target to run again.

	* tools/bin/spp (main): Allow module `utc0'. 

2010-07-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in MT-Alpha code generation.

	When a program of the following form is compiled:

	{
	   foo();
	   p[...] = ...;
	}

	Then the instruction sequence becomes:

	   jsr
	   ldah $gp.... !gpdisp!... # gp reload 1st half
	   stq ...
	   ...
	   lda $gp, ... !gpdisp!... # gp reload 2nd half